@@ -1,0 +1,13 @@
+<table width="95%" border="1" cellspacing="1" cellpadding="2">
+<tr>
+	<td class="title" colspan="5" id="dClients">DHCP Clients</td>
+</tr>
+<tr style="background-color: #E8F8FF">
+	<th>Hostname</th>
+	<th>MAC Address</th>
+	<th>IP Address</th>
+	<th>Expires in</th>
+	<th>Static</th>
+</tr>
+	<% getDhcpCliList(); %>
+</table>
